# MarchingCube

MarchingCubes/: CMakeLists.txt  MarchingCubes.cpp  build.sh  main.cpp  rock_poro_images.sh  test_rock_images.sh
MarchingCubes/CT/: 086.hdr
